assets/landing-delivery.css
.delivery-bg {
    overflow: hidden !important;
    background: #FFF3E5;
    padding: 50px 15px;
    position: relative;
}

.pt-70 {
    padding-top: 70px !important;
}

.tab p {
    margin: 0;
}

.tab {
    display: flex;
    justify-content: center;
    line-height: 150%;
    min-width: 284px;
    color: #1D2E42;
    font-size: 1.063rem;
    margin: 0;
    max-width: 100vw;
    position: absolute;
    top: -1px;
    left: 50%;
    transform: translateX(-50%);
    padding: 20px 10px;
    height: fit-content;
    text-align: center;
    background: #fff;
    border-bottom-left-radius: 30px;
    border-bottom-right-radius: 30px;
}

.bg-card {
    background: white;
    border-radius: 15px;
}

.gap-20 {
    gap: 20px;
}

.bg-card:first-child {
    margin-top: 30px;
}

.tab:before,
.tab:after {
    content: "";
    position: absolute;
    height: 30px;
    width: 65px;
    top: 0;
}

.tab:after {
    right: -60px;
    border-radius: 30px 0 0 0;
    box-shadow: -15px 0 0 0 #fff;
}

.tab:before {
    left: -60px;
    border-radius: 0 30px 0 0;
    box-shadow: 15px 0 0 0 #fff;
}

.delivery-btn-padding {
    padding-top: 40px;
}
.delivery-landing-mt {
    margin-bottom: 20px;
}
.delivery-title {
    padding-bottom: 0;
    font-size: 24px;
    line-height: 150%;
    font-weight: 600;
    color: #1D2E42;
}

.delivery-img {
    width: 80px;
    height: 80px;
    padding-top: 20px
}

.delivery-title-sm {
    padding-top: 17px;
    padding-bottom: 20px;
    font-weight: 500;
    font-size: 17px;
    line-height: 150%;
    color: #1D2E42;
}

.delivery-text {
    font-size: 14px;
    line-height: 24px;
    color: white;
    padding-top: 1px;
}

@media screen and (max-width:991px) {
    .delivery-btn-padding a {
        width: 100%;
        /*max-width: 315px;*/
    }

    #section-delivery .container {
        padding-left: 0;
        padding-right: 0;
    }
}


@media screen and (min-width: 992px) {
    .gap-20 {
        gap: 0;
    }

    .bg-card:first-child {
        margin-top: 0;
        margin-left: 0;
    }

    .bg-card {
        padding: 0;
        margin: 0 12px;
        max-width: 397px !important;
        max-height: 169px !important;
    }

    .bg-card:last-child{
        margin-right: 0;
    }

    .tab {
        font-size: 20px;
        width: 40%;
        padding: 20px 25px;
    }

    .tab:before,
    .tab:after {
        content: "";
        position: absolute;
        height: 45px;
        width: 65px;
        top: 0;
    }

    .tab:after {
        right: -65px;
        border-radius: 45px 0 0 0;
        box-shadow: -30px 0 0 0 #fff;
    }

    .tab:before {
        left: -65px;
        border-radius: 0 45px 0 0;
        box-shadow: 30px 0 0 0 #fff;
    }


    .delivery-landing-mt {
        margin-bottom: 50px;
    }
    .delivery-bg {
        padding-top: 50px;
        padding-bottom: 70px;
    }

    .delivery-title {
        font-size: 28px;
        line-height: 150%;
        padding-bottom: 50px;
    }

    .delivery-img {
        width: 60px;
        padding-top: 0;

    }

    .delivery-title-sm {
        padding-top: 15px;
        font-size: 20px;
        line-height: 31px;
    }

    .delivery-text {
        font-size: 16px;
        line-height: 27px;
        padding-top: 7px;
    }
}

